--- a/.github/workflows/InfraStream_Policy.yml
+++ b/.github/workflows/InfraStream_Policy.yml
@@ -2,7 +2,7 @@ name: 'Terraform_Deploy_InfraStream_Policy'
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
 
 permissions:
